[tool.poetry]
name = "do-gpt"
version = "0.1.0"
description = ""
authors = ["Javier Gallo <javier_rooster@yahoo.com.ar>"]
readme = "README.md"
packages = [{include = "dogpt"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.7.0"}
openai = "^0.27.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
